--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -43,12 +43,12 @@
   <ItemGroup>
     <Compile Include="Connection\ConnectionSql.cs" />
     <Compile Include="Entities\CuentasDA.cs" />
-    <Compile Include="Entities\DetalleOrdenDA.cs" />
+    <Compile Include="Entities\DetalleVentaDA.cs" />
     <Compile Include="Entities\InicioDA.cs" />
     <Compile Include="Entities\LoginUser.cs" />
-    <Compile Include="Entities\MenuDA.cs" />
+    <Compile Include="Entities\ProductosDA.cs" />
     <Compile Include="Entities\MesasDA.cs" />
-    <Compile Include="Entities\OrdenesDA.cs" />
+    <Compile Include="Entities\VentasDA.cs" />
     <Compile Include="Entities\UsuariosDA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
